Salesforce CPQ/main/default/objects/SubscribedAsset__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the subscribed asset record is active.</description>
    <inlineHelpText>Indicates whether the subscribed asset record is active.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>