Salesforce CPQ/main/default/objects/SubscribedAsset__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Asset being covered by a subscription.</description>
    <inlineHelpText>Asset being covered by a subscription.</inlineHelpText>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>