Salesforce CPQ/main/default/objects/SubscribedAsset__c/fields/AssetRootId__c.field-meta.xml
<CustomField>
    <fullName>AssetRootId__c</fullName>
    <description>The ID of the subscription or asset at the root of the bundle that contains the related asset</description>
    <formula>IF(NOT(ISBLANK(Asset__r.RevisedAsset__r.RootId__c)), Asset__r.RevisedAsset__r.RootId__c, IF(NOT(ISBLANK(Asset__r.RootId__c)), Asset__r.RootId__c, null))</formula>
    <inlineHelpText>The ID of the subscription or asset at the root of the bundle that contains the related asset</inlineHelpText>
    <label>Asset Root Id</label>
    <type>Text</type>
</CustomField>