Salesforce CPQ/main/default/objects/SubscribedAsset__c/fields/ContractId__c.field-meta.xml
<CustomField>
    <fullName>ContractId__c</fullName>
    <description>Identifies the contract for the subscription.</description>
    <formula>Subscription__r.Contract__c</formula>
    <inlineHelpText>Identifies the contract for the subscription.</inlineHelpText>
    <label>Contract Id</label>
    <type>Text</type>
</CustomField>