Salesforce CPQ/main/default/objects/SubscribedAsset__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <description>Subscription that covers the asset.</description>
    <inlineHelpText>Subscription that covers the asset.</inlineHelpText>
    <label>Subscription</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>Subscribed Assets</relationshipLabel>
    <relationshipName>SubscribedAssets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>