Salesforce CPQ/main/default/objects/SubscribedAsset__c/fields/UsageEndDate__c.field-meta.xml
<CustomField>
    <fullName>UsageEndDate__c</fullName>
    <formula>Asset__r.UsageEndDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Usage End Date</label>
    <type>Date</type>
</CustomField>